--- a/Курс.html
+++ b/Курс.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="Курс1.js"></script>
+	<script src="Задание1/Курс2.js"></script>
 	<title></title>
 </head>
 <body>
